[package]
name = "re_file"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json", "multipart"] } # HTTP Client for Cloudinary
serde = { version = "1.0", features = ["derive"] } # Serialization/Deserialization
serde_json = "1.0" # JSON support
sha2 = "0.10" # Hashing
dotenv = "0.15.0" # For environment variables
aes = "0.7.5"
block-modes = "0.8.1"
rand = "0.8.5"
rayon = "1.7"                                             
backoff = "0.4.0" 
tokio = { version = "1.40", features = ["full"] }       
